--- a/kubernetes/deploy-mysql.yaml
+++ b/kubernetes/deploy-mysql.yaml
@@ -18,7 +18,7 @@ spec:
         name: mysql
         env:
         - name: MYSQL_ROOT_PASSWORD
-          value: root@5gk8s
+          value: root@5gk8s!
         - name: MYSQL_DATABASE
           value: 5gk8s
         - name: MYSQL_USER
