--- a/kubernetes/deploy-mysql.yaml
+++ b/kubernetes/deploy-mysql.yaml
@@ -34,6 +34,8 @@ spec:
         volumeMounts:
         - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
+      nodeSelector:
+        kubernetes.io/hostname: kube-worker2
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
