--- a/kubernetes/mysql/pvc-5gk8s-db.yaml
+++ b/kubernetes/mysql/pvc-5gk8s-db.yaml
@@ -5,10 +5,10 @@ metadata:
 spec:
   resources:
     requests:
-      storage: 5Gi
+      storage: 10Gi
   accessModes:
   - ReadWriteOnce
   storageClassName: normal
   selector:
     matchLabels:
-      db: mysql
+      db: 5gk8s-mysql
